# WireWorld

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: CheckCxx11.cmake  FindOpenCL.cmake  cxx11_auto.cxx  cxx11_features.hxx.in
cmake/Modules/cxx11/: CheckCxx11.cmake
src/: CMakeLists.txt  benchmark.cxx  benchmark.hxx  main.cxx  opencl.cxx  opencl.hxx  settings.cxx  settings.hxx
