PROJECT ( WireWorld CXX )
CMAKE_MINIMUM_REQUIRED ( VERSION 2.8.11 )

SET ( CMAKE_INCLUDE_CURRENT_DIR ON )

LIST ( APPEND CMAKE_MODULE_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules"
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/cxx11"
)

INCLUDE ( CheckCxx11 )
CXX11_REQUIRE_FEATURES ()

FIND_PACKAGE ( OpenCL REQUIRED )

ADD_SUBDIRECTORY ( src )

