FILE ( GLOB_RECURSE ww_SOURCES *.cxx )
FILE ( GLOB_RECURSE ww_HEADERS *.hxx )

INCLUDE_DIRECTORIES ( ${OPENCL_INCLUDE_DIRS} )

ADD_DEFINITIONS ( ${CXX11_DEFINES} )

ADD_EXECUTABLE ( wireworld ${ww_SOURCES} ${ww_HEADERS} )
TARGET_LINK_LIBRARIES ( wireworld ${OPENCL_LIBRARIES} )

INSTALL ( TARGETS wireworld DESTINATION bin )
