FILE ( GLOB ww_SOURCES *.cxx )
FILE ( GLOB ww_HEADERS *.hxx )

INCLUDE_DIRECTORIES ( ${OPENCL_INCLUDE_DIRS} )

ADD_DEFINITIONS ( ${CXX11_DEFINES} )
IF ( MSVC )
    ADD_DEFINITIONS (
        -D_CRT_SECURE_NO_WARNINGS
        -D_SCL_SECURE_NO_WARNINGS
    )
ENDIF ()

ADD_EXECUTABLE ( wireworld WIN32 ${ww_SOURCES} ${ww_HEADERS} )
TARGET_LINK_LIBRARIES ( wireworld
    ${OPENCL_LIBRARIES}
    Qt5::Core Qt5::Gui Qt5::Widgets Qt5::OpenGL
)

INSTALL ( TARGETS wireworld DESTINATION bin )
